--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
         "aritra",
         "fastapi",
         "pydantic",
+        "rcode",
+        "respdata",
+        "respstatus",
+        "rmsg",
         "uvicorn"
     ]
 }
